k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: comment
  template:
    metadata:
      labels: 
        app: comment
    spec:
      containers:
        - name: comment-svc
          image: konicsdev/comment-svc
---
apiVersion: v1
kind: Service
metadata:
  name: comment-svc
spec:
  selector:
    app: comment
  ports:
  - name: comment
    port: 3001
    protocol: TCP
    targetPort: 3001
